[workspace]
members = ["xtask/", "crates/*"]
resolver = "2"
exclude = ["crates/testbed/repositories/*"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Luc Georges <luc@huggingface.co>"]

# [profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
# debug = 0

[profile.dev.package]
# This speeds up `cargo xtask dist`.
miniz_oxide.opt-level = 3

[profile.release]
incremental = true
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = 0

[workspace.dependencies]
