[package]
name = "gitignore"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3"
thiserror = "1"

[dev-dependencies]
tempdir = "0.3"
