[package]
name = "llm-ls"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "llm-ls"

[dependencies]
arrow-array = "50"
arrow-schema = "50"
candle = { version = "0.3", package = "candle-core", default-features = false }
candle-nn = "0.3"
candle-transformers = "0.3"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
gitignore = { path = "../gitignore" }
hf-hub = { version = "0.3", features = ["tokio"] }
home = "0.5"
lance-linalg = "0.9.9"
ropey = { version = "1.6", default-features = false, features = [
  "simd",
  "cr_lines",
] }
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokenizers = { version = "0.15", default-features = false, features = ["onig"] }
tokio = { version = "1", features = [
  "fs",
  "io-std",
  "io-util",
  "macros",
  "rt-multi-thread",
] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tree-sitter = "0.20"
tree-sitter-bash = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-c-sharp = "0.20"
tree-sitter-css = "0.20"
tree-sitter-elixir = "0.1"
tree-sitter-erlang = "0.4"
tree-sitter-go = "0.20"
tree-sitter-html = "0.20"
tree-sitter-java = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-json = "0.20"
tree-sitter-kotlin = "0.3.1"
tree-sitter-lua = "0.0.19"
tree-sitter-md = "0.1"
tree-sitter-objc = "3"
tree-sitter-php = "0.22"
tree-sitter-python = "0.20"
tree-sitter-r = "0.19"
tree-sitter-ruby = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-scala = "0.20"
tree-sitter-swift = "0.4"
tree-sitter-typescript = "0.20"
vectordb = "0.4"

[dependencies.uuid]
version = "1.4"
features = ["v4", "fast-rng", "serde"]

[dev-dependencies]
lsp-client = { path = "../lsp-client" }
