[package]
name = "llm-ls"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "llm-ls"

[dependencies]
home = "0.5"
ropey = { version = "1.6", default-features = false, features = [
  "simd",
  "cr_lines",
] }
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.14", default-features = false, features = ["onig"] }
tokio = { version = "1", features = [
  "fs",
  "io-std",
  "io-util",
  "macros",
  "rt-multi-thread",
] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tree-sitter = "0.20"
tree-sitter-bash = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-c-sharp = "0.20"
tree-sitter-elixir = { git = "https://github.com/elixir-lang/tree-sitter-elixir.git", rev = "a2861e88a730287a60c11ea9299c033c7d076e30", version = "0.1.0" }
tree-sitter-erlang = "0.2"
tree-sitter-go = "0.20"
tree-sitter-html = { git = "https://github.com/tree-sitter/tree-sitter-html.git", rev = "d742025fa2d8e6100f134a6ea990443aa1f074b3", version = "0.20.0" }
tree-sitter-java = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-json = "0.20"
tree-sitter-kotlin = "0.3.1"
tree-sitter-lua = "0.0.19"
tree-sitter-md = "0.1"
tree-sitter-objc = "3"
tree-sitter-python = "0.20"
tree-sitter-r = "0.19"
tree-sitter-rust = "0.20"
tree-sitter-scala = "0.20"
tree-sitter-swift = "0.3"
tree-sitter-typescript = "0.20"

[dependencies.uuid]
version = "1.4"
features = ["v4", "fast-rng", "serde"]
