[package]
name = "llm-ls"
version = "0.5.4"
edition = "2021"

[[bin]]
name = "llm-ls"

[dependencies]
time = "0.3.35"
clap = { version = "4", features = ["derive"] }
custom-types = { path = "../custom-types" }
home = "0.5"
ropey = { version = "1.6", default-features = false, features = [
  "simd",
  "cr_lines",
] }
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokenizers = { version = "0.15", default-features = false, features = ["onig"] }
tokio = { version = "1", features = [
  "fs",
  "io-std",
  "io-util",
  "macros",
  "rt-multi-thread",
] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tree-sitter = "0.20"
tree-sitter-bash = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-c-sharp = "0.20"
tree-sitter-elixir = "0.1"
tree-sitter-erlang = "0.4"
tree-sitter-go = "0.20"
tree-sitter-html = "0.20"
tree-sitter-java = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-json = "0.20"
tree-sitter-kotlin = "0.3.1"
tree-sitter-lua = "0.0.19"
tree-sitter-md = "0.1"
tree-sitter-objc = "3"
tree-sitter-python = "0.20"
tree-sitter-r = "0.19"
tree-sitter-ruby = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-scala = "0.20"
tree-sitter-swift = "0.4"
tree-sitter-typescript = "0.20"

[dependencies.uuid]
version = "1.4"
features = ["v4", "fast-rng", "serde"]
