[package]
name = "lsp-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-types = "0.94"
oneshot = { version = "0.1", default-features = false, features = ["std"] }
serde = "1"
serde_json = "1"
tracing = "0.1"

