[package]
name = "lsp-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-types = "0.94"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["io-util", "process"] }
tracing = "0.1"

