[package]
name = "testbed"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
home = "0.5"
lsp-client = { path = "../lsp-client" }
lsp-types = "0.94"
ropey = "1.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ureq = "2.8"
url = "2"
zip = "0.6"

[dependencies.uuid]
version = "1.4"
features = [
    "v4",
    "fast-rng",
    "serde",
]
