[package]
name = "testbed"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
futures-util = "0.3"
home = "0.5"
lsp-client = { path = "../lsp-client" }
lsp-types = "0.94"
rand = "0.8"
reqwest = { version = "0.11", features = ["stream"] }
ropey = "1.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
tokio = "1"
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
zip = "0.6"

[dependencies.uuid]
version = "1.4"
features = [
    "v4",
    "fast-rng",
    "serde",
]
